# Vyuta

./: .gitignore  FORK.md  README.md  product.json
.claude/hooks/: session-start.sh
.github/workflows/: vyuta-ci.yml
docs/: README.md  architecture.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  plan.md
extensions/drone-companion/: README.md  package-lock.json  package.json
extensions/drone-companion/media/: companion.css  companion.js
extensions/drone-companion/src/: CompanionPanel.ts  extension.ts
extensions/drone-firmware/: README.md  package-lock.json  package.json
extensions/drone-firmware/src/: commands.ts  debugAdapter.ts  extension.ts  probeAddon.ts  taskProvider.ts
extensions/drone-logbook/: README.md  package-lock.json  package.json
extensions/drone-logbook/media/: logbook.css  logbook.js
extensions/drone-logbook/src/: LogbookPanel.ts  extension.ts
extensions/drone-mission/: README.md  package-lock.json  package.json
extensions/drone-mission/examples/: survey.mission
extensions/drone-mission/src/: extension.ts  missionController.ts  missionSerializer.ts
extensions/drone-safety/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/drone-safety/media/: safety.css  safety.js
extensions/drone-safety/src/: SafetyPanel.ts  extension.ts
extensions/drone-simulation/: README.md  package-lock.json  package.json
extensions/drone-simulation/media/: sim.css  sim.js  viewport3d.js
extensions/drone-simulation/src/: SimulationPanel.ts  extension.ts
extensions/drone-telemetry/: README.md  package-lock.json  package.json
extensions/drone-telemetry/media/: attitude.js  cockpit.js  main.css  main.js  map.js
extensions/drone-telemetry/src/: TelemetryPanel.ts  extension.ts
extensions/drone-tuning/: README.md  package-lock.json  package.json
extensions/drone-tuning/media/: tuning.css  tuning.js
extensions/drone-tuning/src/: TuningPanel.ts  extension.ts
rust/: .gitignore  Cargo.toml
rust/agent/: Cargo.toml
rust/agent/src/: graph.rs  main.rs  manager.rs  protocol.rs  state.rs  ws.rs
rust/logbook/: Cargo.toml
rust/logbook/src/: main.rs  model.rs  review.rs  synthetic.rs  ulog.rs  ws.rs
rust/maestros/: Cargo.toml
rust/maestros/examples/: mav_sim.rs
rust/maestros/src/: main.rs  params.rs  preflight.rs  px4.rs  recorder.rs  telemetry.rs  ws.rs
rust/maestros/src/sources/: mavlink_source.rs  mod.rs  synthetic.rs
rust/probe-rs-extension/: Cargo.toml  index.cjs  package.json
rust/probe-rs-extension/src/: lib.rs
rust/sim-manager/: Cargo.toml
rust/sim-manager/examples/: sim_probe.rs
rust/sim-manager/src/: backend.rs  main.rs  manager.rs  mock.rs  protocol.rs  state.rs  worlds.rs  ws.rs
