[package]
name = "vyuta-agent"
version = "0.1.0"
edition = "2021"
description = "Vyuta companion-computer agent — ROS 2 introspection, colcon build & deploy (Phase 6)."
license = "MIT"

[[bin]]
name = "vyuta-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# NOTE (Phase 8 upgrade): the plan targets a tonic gRPC server for the companion
# control plane. No protoc toolchain is available, so — like the other Vyuta
# sidecars — the agent speaks JSON over a WebSocket; tonic + prost is the
# drop-in upgrade once protoc is in CI:
#   tonic = "0.12"
#   prost = "0.13"
