[package]
name = "maestros"
version = "0.1.0"
edition = "2021"
description = "Vyuta MAVLink telemetry gateway sidecar (Phase 0 scaffold)."
license = "MIT"

[[bin]]
name = "maestros"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# NOTE (Phase 1): the real MAVLink decode path will add:
#   mavlink = { version = "0.13", features = ["common", "udp"] }
# It is intentionally deferred so the Phase 0 scaffold builds quickly and
# offline. See docs/phase-0.md.
