[package]
name = "maestros"
version = "0.1.0"
edition = "2021"
description = "Vyuta MAVLink telemetry gateway sidecar."
license = "MIT"

[[bin]]
name = "maestros"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Phase 1: real MAVLink decode over UDP/TCP using the common dialect.
mavlink = { version = "0.13", default-features = false, features = ["std", "common", "udp", "tcp"] }
