[package]
name = "probe-rs-extension"
version = "0.1.0"
edition = "2021"
description = "Vyuta debug bridge: Neon (Node N-API) addon wrapping probe-rs."
license = "MIT"

[lib]
name = "vyuta_probe_rs"
# Neon addons are loaded by Node as a dynamic library (.node == cdylib).
crate-type = ["cdylib"]

[dependencies]
neon = "1"
serde = { workspace = true }
serde_json = { workspace = true }

# Phase 2: enumerate debug probes and expose target metadata. probe-rs 0.31
# uses pure-Rust USB (no libudev system dependency). The actual debug *session*
# is driven by `probe-rs dap-server` from the VS Code DAP factory; this addon
# provides synchronous probe/target queries to the UI.
probe-rs = "0.31"
