[package]
name = "sim-manager"
version = "0.1.0"
edition = "2021"
description = "Vyuta simulation manager sidecar — drives PX4 SITL + Gazebo and streams pose/status (Phase 3)."
license = "MIT"

[[bin]]
name = "sim-manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# NOTE (Phase 6/8 upgrade): the control plane is JSON over WebSocket, mirroring
# the `maestros` telemetry transport so Phase 3 builds offline without a protoc
# toolchain. The plan's gRPC control surface (tonic + prost) is the drop-in
# upgrade once protoc is available in CI:
#   tonic = "0.12"
#   prost = "0.13"
